[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typography"
version = "0.1.0"
# dependencies = []
requires-python = "~= 3.10"
authors = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
maintainers = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
# description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/maxkapur/typography.py"
Documentation = "https://github.com/maxkapur/typography.py"
Repository = "https://github.com/maxkapur/typography.py.git"
"Bug Tracker" = "https://github.com/maxkapur/typography.py/issues"

[project.scripts]
typography = "typography:main"

[tool.ruff.lint]
extend-select = ["I"]
